# multi-agent

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_REPORT.md  CONVERSATION_FEATURE.md  LICENSE  LectureCrewLLM_20260531_220913.pptx  PPT_SLIDES.md  PPT_SPEECH.md  PROJECT_REPORT.md  PROJECT_SLIDES.md  PROJECT_SUMMARY.md  RAG_CHECK_REPORT.md  README.md  README_CN.md  README_WEB_UI.md  WEB_UI_COMPLETE.md  WEB_UI_GUIDE.md  WEB_UI_IMPLEMENTATION.md  cookies.txt  main.py  pyproject.toml  requirements.txt  start_web_ui.bat  start_web_ui.sh  web_ui.py
cache/: answer_cache.json
conversations/sessions/: 1.json  e2e-test.json
knowledge/: W5_LLM_Transformer_applications zh-Hans.pptx  W6_LLM_GPT的训练.pptx
md/: BUG_REPORT.md  diagrams.md  feture.md  gaps.md
output/: lecture_output_20260517_145238.md  lecture_output_20260517_175954.md  lecture_output_20260518_095004.md
picts/: BUG_REPORT.md  diagrams.md  feture.md  generate_diagrams.py
static/: script.js  style.css
templates/: index.html
tests/: __init__.py  test_answer_cache.py  test_conversation_manager.py  test_local_file_tool.py  test_rag.py  test_session_manager.py  test_status_tracker.py  test_web_api.py
tools/: __init__.py  answer_cache.py  conversation_manager.py  document_processor.py  google_search_tool.py  image_captioner.py  local_file_tool.py  rag_store.py  session_manager.py  status_tracker.py  tavily_search_tool.py
