[project]
name = "lecture-crewllm"
version = "1.0.0"
description = "Multi-agent lecture analysis system with RAG, web search, and Web UI"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "LectureCrewLLM Team" },
]

dependencies = [
    "crewai>=1.0.0,<2.0.0",
    "chromadb>=1.0.0,<2.0.0",
    "sentence-transformers>=3.0.0,<6.0.0",
    "flask>=3.0.0,<4.0.0",
    "PyPDF2>=3.0.0,<4.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
]

[project.scripts]
lecture-crewllm = "main:main"
lecture-crewllm-web = "web_ui:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"
